--- a/css/custom.css
+++ b/css/custom.css
@@ -1,43 +1,77 @@
-.navbar {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  right: 0;
-  left: 0;
-  background-color: #e74c3c;
-  width: 100%;
-  height: 90px;
-  padding: 20px;
+header {
+  background: url("https://unsplash.it/5184/3456?image=825") no-repeat fixed center / cover;
+  text-align: center;
+  padding: 80px 0px 150px;
 }
 
-.navbar a {
-  text-decoration: none;
-  color: #FFF;
-  font-size: 5.0rem;
+nav {
+
 }
 
-.navbar ul {
-  display: inline-block;
-  margin-bottom: 0px;
+nav ul {
   list-style: none;
-  float: right;
 }
 
-.navbar ul li a {
+nav li {
   display: inline-block;
-  font-size: 2.6rem;
+  margin-bottom: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  position: relative;
+  height: 30px;
+  padding: 7px 0px;
+  line-height: 30px;
+  color: white;
+  padding: 20px;
+  font-size: 3.0rem;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+}
+
+nav a:hover {
+  color: #e74c3c;
+}
+
+h1, h4 {
+  color: white;
+}
+
+h1 {
+  margin-top: 150px;
+}
+
+h4 {
+  margin-bottom: 75px;
+}
+
+a.btn {
+  padding: 20px 60px;
+  border: 4px solid white;
+  color: white;
+  text-decoration: none;
+  font-size: 2.5rem;
+  margin-top: 	30px;
+  transition: all 0.7s;
+}
+
+a.btn:hover {
+  border-color: #e74c3c;
+  color: #e74c3c;
 }
 
 .main {
-  padding-top: 200px;
+  padding-top: 100px;
+  text-align: center;
 }
 
-@media (max-width: 400px) {
-  .navbar a, .navbar ul li a {
-    font-size: 0.9rem;
-  }
+hr {
+  width: 120px;
+  height: 1px;
+  background-color: black;
+}
 
-  .navbar {
-    height: 20px;
-  }
+nav a#ctc-link {
+  margin-right: 0px;
 }
