--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@ h1, h4 {
 }
 
 h1 {
-  margin-top: 150px;
+  margin-top: 140px;
 }
 
 h4 {
@@ -66,12 +66,34 @@ a.btn:hover {
   text-align: center;
 }
 
+.main h2 a {
+  text-decoration: none;
+  color: black;
+}
+
 hr {
   width: 120px;
   height: 1px;
   background-color: black;
 }
 
+.main img {
+  border-radius: 100%;
+  height: 200px;
+  width: 200px;
+}
+
+.main p {
+  font-size: 1.8rem;
+  margin-top: 30px;
+}
+
 nav a#ctc-link {
   margin-right: 0px;
+}
+
+@media all and (max-width: 310px) {
+  a.btn {
+    padding: 10px 30px;
+  }
 }
